televisit scrollbar issue fix

--- a/force-app/main/default/lwc/televisitCreationScreen/televisitCreationScreen.css
+++ b/force-app/main/default/lwc/televisitCreationScreen/televisitCreationScreen.css
@@ -343,7 +343,7 @@ textdecoration {
     only screen and (min-device-width: 428px) and (max-device-height: 926px) and (-webkit-device-pixel-ratio: 3),
     only screen and (-webkit-min-device-pixel-ratio: 3) {
         .vertical-scroll::-webkit-scrollbar {
-           display: none;
+           display: none !important;
     }
        
 }
@@ -354,7 +354,7 @@ textdecoration {
     .televisit {
         float: none;
         margin-left: 0;
-        margin-top: -2px;
+        margin-top: -2px ;
         display: grid;
         width: 100%;
     }
